[project]
name = "learn-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "typer[all]>=0.15.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=8.32.0",
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.4",
]


#
# workspace
#
[tool.uv.workspace]
members = [
    "packages/py-quant/try-gatews",
    "packages/py-quant/try-ccxt",
    "packages/py-gui/try-beeware",
    "packages/py-gui/try-kivy/kivy-basic",
    "packages/py-ai/try-chroma",
    "packages/py-ai/try-gemini",
]
