[project]
name = "learn-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    #    "typer[all]>=0.9.4",
    "typer[all]>=0.9.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=8.32.0",
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
docs = ["mkdocs>=1.6.1", "mkdocs-material>=9.6.4"]


#
# workspace
#   - https://docs.astral.sh/uv/concepts/projects/workspaces/#workspace-sources
#
[tool.uv.workspace]
members = [
    "packages/py-101/*", # python 语法特性

    #
    # 热门领域
    #
    "packages/py-ai/*",         # ai
    "packages/py-quant/*",      # 量化交易
    "packages/py-data/*",       # 大数据
    "packages/py-crawler/*",    # 爬虫
    "packages/py-automation/*", # Android 自动化测试框架
    "packages/py-chart/*",      # 数据可视化

    #
    # 热门包调研
    #
    "packages/try/*",
    "packages/py-gui/try-beeware",
    "packages/py-gui/try-nicegui",
    "packages/py-gui/try-kivy/kivy-basic",
    "packages/py-gui/try-flet/flet-desktop",
    "packages/py-gui/try-pytauri",
    "packages/py-db/try-duckdb",
    "packages/py-webui/try-streamlit",
]

exclude = [
    #    "packages/py-gui/try-flet/flet-desktop",
]
