[project]
name = "learn-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    #    "typer[all]>=0.9.4",
    "typer[all]>=0.9.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "django-ninja>=1.4.0",
    "ipython>=8.32.0",
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
docs = ["mkdocs>=1.6.1", "mkdocs-material>=9.6.4"]


#
# workspace
#   - https://docs.astral.sh/uv/concepts/projects/workspaces/#workspace-sources
#
[tool.uv.workspace]
members = [
    "packages/py-101/*", # python 语法特性

    #
    # 热门领域
    #
    "packages/py-ai/*",         # ai
    "packages/py-quant/*",      # 量化交易
    "packages/py-data/*",       # 大数据
    "packages/py-crawler/*",    # 爬虫
    "packages/py-automation/*", # Android 自动化测试框架
    "packages/py-chart/*",      # 数据可视化
    "packages/py-web/*",        # web
    "packages/py-rpc/*",        # rpc
    "packages/py-mq/*",         # 消息队列


    #
    # 热门包调研
    #
    "packages/try/*",

    #
    # gui
    #
    "packages/py-gui/try-beeware",
    "packages/py-gui/try-nicegui",
    "packages/py-gui/try-kivy/kivy-basic",
    "packages/py-gui/try-flet/flet-desktop",
    "packages/py-gui/try-pytauri",

    #
    # db
    #
    "packages/py-db/try-duckdb",

    #
    # web ui
    #
    "packages/py-webui/try-streamlit",
    "packages/py-webui/try-gradio",

    #
    # python FFI
    #
    "packages/py-ffi/try-pythonnet",
]

exclude = [
    "packages/py-quant/try-vnpy", # TODO X: 依赖 pyside6, 此包太大, 影响构建速度, 先排除
    "packages/py-gui/try-pyside", # TODO X: 依赖 pyside6, 此包太大, 影响构建速度, 先排除
    #    "packages/py-gui/try-flet/flet-desktop",
]
